--- a/03_goddag.html
+++ b/03_goddag.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<h2>Hej og velkommen</h2>
+		<p>Indtast venligst dit navn</p>
 
-    <input type="text" id="navn"> 
-    <button>Klik og kig i konsollen!</button>
-    <script>
-        document.querySelector("button").addEventListener("click",buttonClicked);
-        function buttonClicked (){
-            let brugerNavn = document.querySelector("#navn").value;
-            console.log('Tillykke dit navn er $brugerNavn');
-            }
-
-    </script>
-</body>
+		<input class="name_input" type="text" />
+		<button class="submit">Indsend</button>
+		<script>
+			let h2 = document.querySelector("h2");
+			let input = document.querySelector(".name_input").value;
+			let submitBtn = document
+				.querySelector(".submit")
+				.addEventListener("click", () => {
+					console.log(`Goddag ${input}`);
+					h2.innerHTML = `Hej og velkommen ${input}`;
+				});
+		</script>
+	</body>
 </html>
